tests/models/struct/unnamed/usize/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    usize
);
fn main() {}
