tests/models/struct/unnamed/usize/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    usize
);
fn main() {}
